--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
   <div class="container">
     <h1>Hanqing Tian</h1>
     <p class="intro">
-      Welcome! I am second year finance PHD student at the University of Melbourne.
+      Welcome! I am a second-year Finance PhD student at the University of Melbourne.
     </p>
 
     <h2>Research Interests</h2>
     <p class="intro">
       • Financial Machine Learning<br>
-      • Asset pricing<br>
+      • Asset Pricing<br>
     </p>
   </div>
 
