--- a/research.html
+++ b/research.html
@@ -87,7 +87,7 @@
       <p class="coauthors">
         With
         <a href="https://www.balogh.net/home" target="_blank">Attila Balogh</a>,
-        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>
+        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>,
         <a href="https://www.lucianosomoza.com/" target="_blank">Luciano Somoza</a>
       </p>
       <p class="paper-abstract">
