--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
   <div class="container">
     <h1>Hanqing Tian</h1>
     <p class="intro">
-      Welcome! I am a second-year Finance PhD student at the University of Melbourne.
+      Welcome! I am a second-year Finance PhD student at the University of Melbourne. 
+      I earned my bachelor's degree from the University of Melbourne and am now continuing my research here as a PhD student. 
+      My primary interests lie at the intersection of machine learning and finance, 
+      with a particular focus on applying natural language processing (NLP) techniques to financial applications. 
+      I explore how large language models (LLMs) can be leveraged for stock price prediction and earnings forecasting. 
+      Additionally, I investigate the limitations and biases of LLMs in finance and work on strategies to enhance their efficiency and reliability in practical use. 
+      I am also highly interested in unconventional data sources for economic and financial research, such as video analysis.
     </p>
 
     <h2>Research Interests</h2>
