--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
       padding: 0;
       background-color: #ffffff;
       font-family: Arial, sans-serif;
+      font-size: 15px; /* Slightly smaller base font size for a modern look */
+      color: #000000;  /* Black text */
     }
 
     /* Navigation bar */
     nav {
       padding: 10px;
       border-bottom: 2px solid #0066cc;  /* Blue-ish line under nav */
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      background-color: #f9f9f9; /* Light background for contrast */
     }
     nav a {
       color: #0066cc;            /* Blue-ish links */
@@ -23,11 +29,22 @@
       text-decoration: none;
       font-weight: bold;
     }
+    nav a:hover {
+      text-decoration: underline; /* Subtle hover effect */
+    }
 
     /* Headings */
     h1, h2 {
       color: #0066cc;            /* Blue-ish headings */
       margin-top: 20px;
+      margin-bottom: 10px;
+    }
+    h1 {
+      font-size: 1.8em;          /* Larger font for main name */
+    }
+    h2 {
+      font-size: 1.4em;
+      margin-top: 30px;
     }
 
     /* Main container */
@@ -37,10 +54,32 @@
       padding: 20px;
     }
 
-    /* Intro text in black */
+    /* Profile container: image + text side by side */
+    .profile-container {
+      display: flex;
+      flex-wrap: wrap;           /* Allows wrapping on smaller screens */
+      align-items: flex-start;
+      margin-top: 20px;
+    }
+
+    /* Profile photo on the left */
+    .profile-photo {
+      max-width: 150px;          /* Control image size */
+      border-radius: 50%;        /* Make it round (optional) */
+      margin-right: 20px;        /* Spacing between image and text */
+      margin-bottom: 20px;       /* Some spacing for smaller screens */
+    }
+
+    /* Profile text on the right */
+    .profile-text {
+      flex: 1;                   /* Take remaining space */
+      min-width: 200px;          /* Ensures text area doesn’t collapse on very small screens */
+    }
+
+    /* Intro text */
     .intro {
-      color: #000000;
       line-height: 1.6;
+      margin-bottom: 20px;
     }
 
     /* Footer */
@@ -48,6 +87,9 @@
       text-align: center;
       padding: 10px;
       color: #333333;
+      background-color: #f9f9f9; /* Match navigation background for consistency */
+      border-top: 1px solid #ddd;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -59,16 +101,26 @@
   </nav>
 
   <div class="container">
-    <h1>Hanqing Tian</h1>
-    <p class="intro">
-      Welcome! I am a second-year Finance PhD student at the University of Melbourne. 
-      I earned my bachelor's degree from the University of Melbourne and am now continuing my research here as a PhD student. 
-      My primary interests lie at the intersection of machine learning and finance, 
-      with a particular focus on applying natural language processing (NLP) techniques to financial applications. 
-      I explore how large language models (LLMs) can be leveraged for stock price prediction and earnings forecasting. 
-      Additionally, I investigate the limitations and biases of LLMs in finance and work on strategies to enhance their efficiency and reliability in practical use. 
-      I am also highly interested in unconventional data sources for economic and financial research, such as video analysis.
-    </p>
+    <!-- Profile section -->
+    <div class="profile-container">
+      <!-- Replace "yourphoto.jpg" with your actual photo file or external link -->
+      <img src="photo.png" alt="Hanqing Tian" class="profile-photo" />
+      <div class="profile-text">
+        <h1>Hanqing Tian</h1>
+        <p class="intro">
+          Welcome! I am a second-year Finance PhD student at the University of Melbourne.
+          I earned my bachelor's degree from the University of Melbourne and am now continuing
+          my research here as a PhD student. My primary interests lie at the intersection of
+          machine learning and finance, with a particular focus on applying natural language
+          processing (NLP) techniques to financial applications. I explore how large language
+          models (LLMs) can be leveraged for stock price prediction and earnings forecasting.
+          Additionally, I investigate the limitations and biases of LLMs in finance and work
+          on strategies to enhance their efficiency and reliability in practical use.
+          I am also highly interested in unconventional data sources for economic and
+          financial research, such as video analysis.
+        </p>
+      </div>
+    </div>
 
     <h2>Research Interests</h2>
     <p class="intro">
