--- a/research.html
+++ b/research.html
@@ -152,8 +152,8 @@
       <!-- Coauthors -->
       <p class="coauthors">
         With
-        <a href="https://sites.google.com/view/marinagertsberg" target="_blank">Marina Gertsberg</a>,
-        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>
+        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>,
+        <a href="https://sites.google.com/view/marinagertsberg" target="_blank">Marina Gertsberg</a>
       </p>
 
       <!-- Optional comment section (leave empty or remove if not needed) -->
