--- a/research.html
+++ b/research.html
@@ -111,6 +111,39 @@
     <div class="paper">
       <h2 class="paper-title">
         <!-- Link in the title -->
+        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5412277" target="_blank">
+          A Financial Brain Scan of the LLM
+        </a>
+      </h2>
+
+      <!-- Coauthors -->
+      <p class="coauthors">
+        With
+        <a href="https://www.mit.edu/~huichen/" target="_blank">Hui Chen</a>,
+        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>,
+        <a href="https://www.lucianosomoza.com/" target="_blank">Luciano Somoza</a>
+      </p>
+
+      <!-- Optional comment section (leave empty or remove if not needed) -->
+      <p class="paper-comment">
+      </p>
+
+      <!-- Abstract -->
+      <p class="paper-abstract">
+        Emerging techniques in computer science make it possible to "brain scan" large language models (LLMs), 
+        identify the plain-English concepts that guide their reasoning, and steer them while holding other factors constant. 
+        We show that this approach can map LLM-generated economic forecasts to concepts such as sentiment, technical analysis, and timing, 
+        and compute their relative importance without reducing performance. 
+        We also show that models can be steered to be more or less risk-averse, optimistic, or pessimistic, 
+        which allows researchers to correct or simulate biases. 
+        The method is transparent, lightweight, and replicable for empirical research in the social sciences.
+      </p>
+    </div>
+
+    <!-- Example paper 2 -->
+    <div class="paper">
+      <h2 class="paper-title">
+        <!-- Link in the title -->
         <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5163754" target="_blank">
           AI in Finance and Information Overload
         </a>
@@ -140,7 +173,7 @@
       </p>
     </div>
 
-    <!-- Example paper 2 -->
+    <!-- Example paper 3 -->
     <div class="paper">
       <h2 class="paper-title">
         <!-- Link in the title -->
