--- a/research.html
+++ b/research.html
@@ -119,9 +119,9 @@
       <!-- Coauthors -->
       <p class="coauthors">
         With
-        <a href="https://www.mit.edu/~huichen/" target="_blank">Hui Chen</a>,
-        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>,
-        <a href="https://www.lucianosomoza.com/" target="_blank">Luciano Somoza</a>
+        <a href="https://www.mit.edu/~huichen/" target="_blank">Hui Chen (MIT)</a>,
+        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim (Uni of Melbourne)</a>,
+        <a href="https://www.lucianosomoza.com/" target="_blank">Luciano Somoza (ESSEC)</a>
       </p>
 
       <!-- Optional comment section (leave empty or remove if not needed) -->
@@ -152,9 +152,9 @@
       <!-- Coauthors -->
       <p class="coauthors">
         With
-        <a href="https://www.balogh.net/home" target="_blank">Attila Balogh</a>,
-        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>,
-        <a href="https://www.lucianosomoza.com/" target="_blank">Luciano Somoza</a>
+        <a href="https://www.balogh.net/home" target="_blank">Attila Balogh (Uni of Melbourne)</a>,
+        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim (Uni of Melbourne)</a>,
+        <a href="https://www.lucianosomoza.com/" target="_blank">Luciano Somoza (ESSEC)</a>
       </p>
 
       <!-- Optional comment section (leave empty or remove if not needed) -->
@@ -185,8 +185,8 @@
       <!-- Coauthors -->
       <p class="coauthors">
         With
-        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim</a>,
-        <a href="https://sites.google.com/view/marinagertsberg" target="_blank">Marina Gertsberg</a>
+        <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim (Uni of Melbourne)</a>,
+        <a href="https://sites.google.com/view/marinagertsberg" target="_blank">Marina Gertsberg (Uni of Melbourne)</a>
       </p>
 
       <!-- Optional comment section (leave empty or remove if not needed) -->
