--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
       <!-- Coauthors -->
       <p class="coauthors">
         With
-        <a href="https://www.mit.edu/~huichen/" target="_blank">Hui Chen (MIT)</a>,
+        <a href="https://mitsloan.mit.edu/faculty/directory/hui-chen" target="_blank">Hui Chen (MIT)</a>,
         <a href="https://www.antoinedidisheim.com/" target="_blank">Antoine Didisheim (Uni of Melbourne)</a>,
         <a href="https://www.lucianosomoza.com/" target="_blank">Luciano Somoza (ESSEC)</a>
       </p>
