--- a/index.html
+++ b/index.html
@@ -1,135 +1,279 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="auto">
 <head>
   <meta charset="UTF-8" />
-  <title>Hanqing Tian - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hanqing Tian — Home</title>
+  <meta name="description" content="Hanqing Tian — Finance PhD at the University of Melbourne. Research at the intersection of machine learning, NLP, and finance." />
+  <meta name="color-scheme" content="light dark" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Hanqing Tian — Home" />
+  <meta property="og:description" content="Finance PhD at the University of Melbourne. ML, NLP, and finance." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="photo.png" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    /* Global styles */
+    /* ===== Design Tokens ===== */
+    :root {
+      --brand: #0066cc;
+      --brand-contrast: #ffffff;
+      --bg: #f6f8fb;
+      --surface: #ffffff;
+      --text: #0f172a; /* slate-900 */
+      --muted-1: #64748b; /* slate-500 */
+      --muted-2: #e5e7eb; /* gray-200 */
+      --ring: #cfe6ff;
+      --chip-bg: #f2f7ff;
+      --shadow: 0 1px 2px rgba(15, 23, 42, 0.06), 0 8px 24px rgba(15, 23, 42, 0.06);
+      --radius: 16px;
+    }
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #0b121b;
+        --surface: #101826;
+        --text: #e5e7eb;
+        --muted-1: #a8b2c1;
+        --muted-2: #233043;
+        --ring: #1e3a5f;
+        --chip-bg: #0f1b2c;
+        --shadow: 0 1px 2px rgba(0, 0, 0, 0.5), 0 8px 24px rgba(0, 0, 0, 0.35);
+      }
+      a { color: #7ab3ff; }
+    }
+
+    [data-theme="light"] {
+      color-scheme: light;
+    }
+    [data-theme="dark"] {
+      color-scheme: dark;
+    }
+
+    /* ===== Global ===== */
+    * { box-sizing: border-box; }
+    html { scroll-behavior: smooth; }
     body {
       margin: 0;
-      padding: 0;
-      background-color: #ffffff;
-      font-family: Arial, sans-serif;
-      font-size: 14px; /* Match research.html base font size */
-      color: #000000;  /* Black text */
-    }
-
-    /* Navigation bar */
-    nav {
-      padding: 10px;
-      border-bottom: 2px solid #0066cc;  /* Blue-ish line under nav */
-      display: flex;
-      align-items: center;
-      background-color: #f9f9f9; /* Optional light background for contrast */
-    }
-    nav a {
-      color: #0066cc;            /* Blue-ish links to match research.html */
-      margin-right: 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline; /* Subtle hover effect */
-    }
-
-    /* Headings (match the research.html style) */
-    h1 {
-      color: #0066cc;
-      margin-top: 20px;
-      font-size: 1.8em;
-      margin-bottom: 10px;
-    }
-    h2 {
-      color: #0066cc;
-      margin-top: 20px;
-      font-size: 1.4em;
-      margin-bottom: 10px;
-    }
-
-    /* Main container */
-    .container {
-      width: 80%;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    /* Profile container: image + text side by side */
-    .profile-container {
-      display: flex;
-      flex-wrap: wrap;           /* Allows wrapping on smaller screens */
-      align-items: flex-start;
-      margin-top: 20px;
-    }
-
-    /* Profile photo on the left */
-    .profile-photo {
-      max-width: 150px;          /* Control image size */
-      border-radius: 50%;        /* Round photo (optional) */
-      margin-right: 20px;
-      margin-bottom: 20px;       /* Some spacing for smaller screens */
-    }
-
-    /* Profile text on the right */
-    .profile-text {
-      flex: 1;                   /* Use remaining space */
-      min-width: 200px;          /* Prevent text from collapsing on narrow screens */
-    }
-
-    /* Intro text */
-    .intro {
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji", "Segoe UI Emoji";
       line-height: 1.6;
-      margin-bottom: 20px;
+      color: var(--text);
+      background: radial-gradient(1200px 500px at 10% -10%, rgba(0,102,204,0.07), transparent 50%),
+                  radial-gradient(1200px 500px at 90% -20%, rgba(0,102,204,0.06), transparent 50%),
+                  var(--bg);
+    }
+    .container {
+      max-width: 980px;
+      margin: 0 auto;
+      padding: clamp(16px, 2.5vw, 24px);
+    }
+    .card {
+      background: var(--surface);
+      border: 1px solid var(--muted-2);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
     }
 
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 10px;
-      color: #333333;
-      background-color: #f9f9f9; 
-      border-top: 1px solid #ddd;
-      margin-top: 40px;
+    /* ===== Skip Link ===== */
+    .skip-link {
+      position: absolute; left: -999px; top: auto; width: 1px; height: 1px; overflow: hidden;
     }
+    .skip-link:focus {
+      left: 16px; top: 16px; width: auto; height: auto; padding: 10px 14px;
+      background: var(--surface); border: 2px solid var(--brand); border-radius: 10px; z-index: 9999;
+    }
+
+    /* ===== Top Bar / Nav ===== */
+    header {
+      position: sticky; top: 0; z-index: 50;
+      backdrop-filter: saturate(180%) blur(10px);
+      background: color-mix(in srgb, var(--surface) 82%, transparent);
+      border-bottom: 1px solid var(--muted-2);
+    }
+    .topbar { display: flex; align-items: center; justify-content: space-between; gap: 12px; }
+    .brand {
+      display: flex; align-items: center; gap: 12px; font-weight: 700; letter-spacing: -0.01em;
+    }
+    .brand .dot { width: 12px; height: 12px; border-radius: 999px; background: var(--brand); box-shadow: 0 0 0 4px var(--ring); }
+
+    nav ul { display: flex; gap: 14px; list-style: none; padding: 0; margin: 0; align-items: center; }
+    nav a {
+      text-decoration: none; font-weight: 600; padding: 8px 10px; border-radius: 10px; color: var(--text);
+      border: 1px solid transparent; transition: border-color .2s, background .2s, color .2s;
+    }
+    nav a:hover { border-color: var(--muted-2); }
+    nav a[aria-current="page"] { color: var(--brand); background: var(--chip-bg); border-color: var(--ring); }
+
+    .actions { display: flex; gap: 10px; align-items: center; }
+    .btn {
+      display: inline-flex; align-items: center; gap: 8px;
+      padding: 10px 14px; border-radius: 12px; text-decoration: none; font-weight: 600; border: 1px solid var(--brand);
+      background: var(--brand); color: var(--brand-contrast); box-shadow: 0 4px 14px rgba(0,102,204,.18);
+      transition: transform .12s ease, box-shadow .12s ease, opacity .12s ease;
+    }
+    .btn:hover { transform: translateY(-1px); box-shadow: 0 8px 22px rgba(0,102,204,.22); }
+    .btn.secondary { background: transparent; color: var(--brand); }
+
+    .theme-toggle { border: 1px solid var(--muted-2); background: var(--surface); border-radius: 12px; padding: 8px 10px; cursor: pointer; }
+
+    /* ===== Hero/Profile ===== */
+    .hero { display: grid; grid-template-columns: 160px 1fr; gap: 24px; align-items: center; }
+    @media (max-width: 640px) { .hero { grid-template-columns: 1fr; text-align: center; } }
+
+    .profile-photo {
+      width: 160px; height: 160px; object-fit: cover; border-radius: 50%;
+      border: 4px solid var(--ring); box-shadow: var(--shadow);
+    }
+    h1 { font-size: clamp(1.8rem, 2vw + 1rem, 2.6rem); line-height: 1.2; margin: 0; color: var(--brand); }
+    h2 { font-size: clamp(1.25rem, 1vw + .9rem, 1.6rem); color: var(--brand); margin: 28px 0 12px; }
+    p { margin: 0 0 10px; max-width: 75ch; }
+    .lead { font-size: 1.05rem; color: var(--text); }
+    .muted { color: var(--muted-1); }
+
+    .pill-row { display: flex; flex-wrap: wrap; gap: 8px; margin-top: 8px; }
+    .pill { padding: 6px 10px; border-radius: 999px; background: var(--chip-bg); border: 1px solid var(--muted-2); font-weight: 500; }
+
+    /* ===== Sections ===== */
+    section { margin-top: 28px; }
+
+    footer { text-align: center; color: var(--muted-1); padding: 20px; border-top: 1px solid var(--muted-2); margin-top: 40px; }
   </style>
 </head>
 <body>
-  <!-- Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="research.html">Research</a>
-  </nav>
+  <a class="skip-link" href="#main">Skip to content</a>
 
-  <div class="container">
-    <!-- Profile section: photo + text -->
-    <div class="profile-container">
-      <!-- Replace "yourphoto.jpg" with an actual image file or external URL -->
-      <img src="photo.png" alt="Hanqing Tian" class="profile-photo" />
-      <div class="profile-text">
-        <h1>Hanqing Tian</h1>
-        <p class="intro">
-          Welcome! I am a second-year Finance PhD student at the University of Melbourne.
-          I earned my bachelor's degree from the University of Melbourne and am now continuing
-          my research here as a PhD student. My primary interests lie at the intersection of
-          machine learning and finance, with a particular focus on applying natural language
-          processing (NLP) techniques to financial applications. I explore how large language
-          models (LLMs) can be leveraged for stock price prediction and earnings forecasting.
-          Additionally, I investigate the limitations and biases of LLMs in finance and work
-          on strategies to enhance their efficiency and reliability in practical use.
-          I am also highly interested in unconventional data sources for economic and
-          financial research, such as video analysis.
-        </p>
+  <header>
+    <div class="container topbar">
+      <div class="brand">
+        <span class="dot" aria-hidden="true"></span>
+        <span>Hanqing Tian</span>
+      </div>
+      <nav aria-label="Primary">
+        <ul>
+          <li><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="research.html">Research</a></li>
+        </ul>
+      </nav>
+      <div class="actions">
+        <a class="btn secondary" href="mailto:hanqing@example.com" title="Email Hanqing" aria-label="Email Hanqing">
+          <!-- Mail icon -->
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 6h16v12H4z" stroke="currentColor" stroke-width="1.5"/><path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.5" fill="none"/></svg>
+          Email
+        </a>
+        <a class="btn" href="research.html">
+          <!-- Book icon -->
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M6 4h9a3 3 0 0 1 3 3v12H9a3 3 0 0 0-3 3V4z" stroke="currentColor" stroke-width="1.5" fill="none"/></svg>
+          Research
+        </a>
+        <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme" title="Toggle light/dark">
+          <!-- Sun/Moon icon -->
+          <svg id="iconSun" width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="1.5"/><path d="M12 2v2M12 20v2M2 12h2M20 12h2M4.2 4.2 5.6 5.6M18.4 18.4l1.4 1.4M18.4 5.6l1.4-1.4M4.2 19.8l1.4-1.4" stroke="currentColor" stroke-width="1.5"/></svg>
+          <svg id="iconMoon" width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true" hidden><path d="M21 12.79A9 9 0 1 1 11.21 3a7 7 0 0 0 9.79 9.79z" stroke="currentColor" stroke-width="1.5"/></svg>
+        </button>
       </div>
     </div>
+  </header>
 
-    <h2>Research Interests</h2>
-    <p class="intro">
-      • Financial Machine Learning<br>
-      • Asset Pricing<br>
-    </p>
-  </div>
+  <main id="main" class="container">
+    <section class="card" style="padding: clamp(16px, 2.5vw, 28px);">
+      <div class="hero">
+        <img class="profile-photo" src="photo.png" alt="Portrait of Hanqing Tian" />
+        <div>
+          <h1>Hanqing Tian</h1>
+          <p class="lead">
+            Third‑year Finance PhD student at the University of Melbourne. I study how
+            <strong>machine learning</strong> and <strong>NLP</strong> can advance
+            <strong>asset pricing</strong> and forecasting, and I probe the limitations and biases of large language models in financial contexts.
+          </p>
+          <p class="muted">I also explore unconventional data sources (e.g., video) for economic and financial research.</p>
+          <div class="pill-row" aria-label="Research interests">
+            <span class="pill">Financial Machine Learning</span>
+            <span class="pill">Asset Pricing</span>
+            <span class="pill">NLP for Finance</span>
+            <span class="pill">LLM Evaluation</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h2>About</h2>
+      <div class="card" style="padding: 20px 24px;">
+        <p>
+          Welcome! I earned my bachelor's at the University of Melbourne and am now continuing at Melbourne as a PhD student. My work focuses on using large language models for stock price prediction and earnings forecasting while developing strategies to enhance reliability and efficiency for real‑world use.
+        </p>
+      </div>
+    </section>
+
+    <section>
+      <h2>Selected Links</h2>
+      <div class="card" style="padding: 16px 20px;">
+        <ul style="margin: 0; padding-left: 18px;">
+          <li><a href="research.html">Research page</a></li>
+          <li><a href="#">CV (PDF)</a></li>
+          <li><a href="#">Google Scholar</a></li>
+          <li><a href="#">GitHub</a></li>
+        </ul>
+      </div>
+    </section>
+  </main>
 
   <footer>
-    &copy; 2025 Hanqing Tian
+    © 2025 Hanqing Tian
   </footer>
+
+  <script>
+    // Simple theme toggle with persistence
+    (function() {
+      const root = document.documentElement;
+      const btn = document.getElementById('themeToggle');
+      const iconSun = document.getElementById('iconSun');
+      const iconMoon = document.getElementById('iconMoon');
+
+      const saved = localStorage.getItem('theme');
+      if (saved === 'light' || saved === 'dark') {
+        root.setAttribute('data-theme', saved);
+      }
+      refreshIcons();
+
+      btn?.addEventListener('click', () => {
+        const current = root.getAttribute('data-theme');
+        const next = current === 'dark' ? 'light' : (current === 'light' ? 'auto' : 'dark');
+        if (next === 'auto') {
+          root.setAttribute('data-theme', 'auto');
+          localStorage.removeItem('theme');
+        } else {
+          root.setAttribute('data-theme', next);
+          localStorage.setItem('theme', next);
+        }
+        refreshIcons();
+      });
+
+      function refreshIcons() {
+        const current = root.getAttribute('data-theme');
+        // If dark or system prefers dark, show sun (to switch to light)
+        const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+        const isDark = current === 'dark' || (current === 'auto' && prefersDark);
+        iconSun.hidden = !isDark;
+        iconMoon.hidden = isDark;
+      }
+    })();
+  </script>
+
+  <!-- Schema.org Person -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Hanqing Tian",
+    "jobTitle": "PhD Candidate, Finance",
+    "affiliation": {
+      "@type": "CollegeOrUniversity",
+      "name": "University of Melbourne"
+    },
+    "url": "index.html",
+    "image": "photo.png"
+  }
+  </script>
 </body>
 </html>
