--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@
     .paper header { display: grid; grid-template-columns: 1fr auto; gap: 12px; align-items: start; background: none; border: none; backdrop-filter: none; position: static; }
     .paper-title a { color: var(--text); text-decoration: none; border-bottom: 2px solid transparent; }
     .paper-title a:hover { border-color: var(--brand); }
-    .meta { display: flex; flex-wrap: wrap; gap: 8px 12px; align-items: center; }
+    .meta { display: flex; flex-direction: column; align-items: flex-start; gap: 6px; }
     .meta .coauthors { color: var(--muted-1); }
     .badges { display: flex; gap: 6px; }
     .badge { font-size: .85rem; padding: 4px 8px; border-radius: 999px; background: var(--chip-bg); border: 1px solid var(--muted-2); }
@@ -114,6 +114,30 @@
     .summary-line svg { flex: none; }
 
     footer { text-align: center; color: var(--muted-1); padding: 20px; border-top: 1px solid var(--muted-2); margin-top: 40px; }
+      
+    /* Manual theme overrides when user picks a mode */
+    html[data-theme="dark"] {
+      --bg: #0b121b;
+      --surface: #101826;
+      --text: #e5e7eb;
+      --muted-1: #a8b2c1;
+      --muted-2: #233043;
+      --ring: #1e3a5f;
+      --chip-bg: #0f1b2c;
+      --shadow: 0 1px 2px rgba(0, 0, 0, 0.5), 0 8px 24px rgba(0, 0, 0, 0.35);
+    }
+    html[data-theme="dark"] a { color: #7ab3ff; }
+
+    html[data-theme="light"] {
+      --bg: #f6f8fb;
+      --surface: #ffffff;
+      --text: #0f172a;
+      --muted-1: #64748b;
+      --muted-2: #e5e7eb;
+      --ring: #cfe6ff;
+      --chip-bg: #f2f7ff;
+      --shadow: 0 1px 2px rgba(15, 23, 42, 0.06), 0 8px 24px rgba(15, 23, 42, 0.06);
+    }
   </style>
 </head>
 <body>
@@ -132,7 +156,7 @@
         </ul>
       </nav>
       <div class="actions">
-        <a class="btn secondary" href="mailto:hanqing@example.com" title="Email Hanqing" aria-label="Email Hanqing">
+        <a class="btn secondary" href="hanqingt@student.unimelb.edu.au" title="Email Hanqing" aria-label="Email Hanqing">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 6h16v12H4z" stroke="currentColor" stroke-width="1.5"/><path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.5" fill="none"/></svg>
           Email
         </a>
@@ -147,12 +171,7 @@
   <main id="main" class="container">
     <section class="card" style="padding: clamp(16px, 2.5vw, 28px);">
       <h1>Working Papers</h1>
-      <p class="muted">A selection of current projects and drafts. Abstracts are toggleable for quick scanning.</p>
-      <div class="legend" aria-label="Legend">
-        <span class="pill">Working paper</span>
-        <span class="pill">Draft</span>
-        <span class="pill">Grant / Award</span>
-      </div>
+      <p class="muted">A selection of current projects and papers. Abstracts are toggleable for quick scanning.</p>
     </section>
 
     <section class="papers">
@@ -262,39 +281,61 @@
   </footer>
 
   <script>
-    // Theme toggle with persistence (same as Home)
+    // Robust theme toggle with persistence; works even if placed in <head>
     (function() {
-      const root = document.documentElement;
-      const btn = document.getElementById('themeToggle');
-      const iconSun = document.getElementById('iconSun');
-      const iconMoon = document.getElementById('iconMoon');
-
-      const saved = localStorage.getItem('theme');
-      if (saved === 'light' || saved === 'dark') {
-        root.setAttribute('data-theme', saved);
-      }
-      refreshIcons();
-
-      btn?.addEventListener('click', () => {
-        const current = root.getAttribute('data-theme');
-        const next = current === 'dark' ? 'light' : (current === 'light' ? 'auto' : 'dark');
-        if (next === 'auto') {
+      function apply(mode) {
+        const root = document.documentElement;
+        if (mode === 'auto') {
           root.setAttribute('data-theme', 'auto');
           localStorage.removeItem('theme');
         } else {
-          root.setAttribute('data-theme', next);
-          localStorage.setItem('theme', next);
+          root.setAttribute('data-theme', mode);
+          localStorage.setItem('theme', mode);
         }
+        refreshIcons();
+      }
+
+      function refreshIcons() {
+        const root = document.documentElement;
+        const iconSun = document.getElementById('iconSun');
+        const iconMoon = document.getElementById('iconMoon');
+        if (!iconSun || !iconMoon) return;
+        const current = root.getAttribute('data-theme') || 'auto';
+        const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+        const isDark = current === 'dark' || (current === 'auto' && prefersDark);
+        iconSun.hidden = !isDark; // show sun in dark mode (tap to go light)
+        iconMoon.hidden = isDark; // show moon in light mode (tap to go dark)
+      }
+
+      // Initialize from storage ASAP
+      (function initFromStorage() {
+        const saved = localStorage.getItem('theme');
+        if (saved === 'light' || saved === 'dark') {
+          document.documentElement.setAttribute('data-theme', saved);
+        } else {
+          document.documentElement.setAttribute('data-theme', 'auto');
+        }
+      })();
+
+      // Attach once DOM is interactive
+      document.addEventListener('DOMContentLoaded', function() {
+        const btn = document.getElementById('themeToggle');
+        if (!btn) return;
+        btn.addEventListener('click', function() {
+          const root = document.documentElement;
+          const current = root.getAttribute('data-theme') || 'auto';
+          const next = current === 'dark' ? 'light' : (current === 'light' ? 'auto' : 'dark');
+          apply(next);
+        });
         refreshIcons();
       });
 
-      function refreshIcons() {
-        const current = root.getAttribute('data-theme');
-        const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
-        const isDark = current === 'dark' || (current === 'auto' && prefersDark);
-        iconSun.hidden = !isDark;
-        iconMoon.hidden = isDark;
-      }
+      // Keep icons in sync if system theme changes while in auto
+      try {
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', function() {
+          if ((localStorage.getItem('theme') || 'auto') === 'auto') refreshIcons();
+        });
+      } catch {}
     })();
   </script>
 
