--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </ul>
       </nav>
       <div class="actions">
-        <a class="btn secondary" href="mailto:hanqing@example.com" title="Email Hanqing" aria-label="Email Hanqing">
+        <a class="btn secondary" href="hanqingt@student.unimelb.edu.au" title="Email Hanqing" aria-label="Email Hanqing">
           <!-- Mail icon -->
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 6h16v12H4z" stroke="currentColor" stroke-width="1.5"/><path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.5" fill="none"/></svg>
           Email
