--- a/research.html
+++ b/research.html
@@ -238,6 +238,10 @@
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.5"/><path d="M21 3 12 12" stroke="currentColor" stroke-width="1.5"/><path d="M10 7H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2-2v-5" stroke="currentColor" stroke-width="1.5"/></svg>
               SSRN
             </a>
+            <a class="btn secondary" href="https://arxiv.org/abs/2508.21285" target="_blank" rel="noopener" aria-label="Open on arXiv">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M14 3h7v7" stroke="currentColor" stroke-width="1.5"/><path d="M21 3 12 12" stroke="currentColor" stroke-width="1.5"/><path d="M10 7H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2-2v-5" stroke="currentColor" stroke-width="1.5"/></svg>
+              arXiv
+            </a>
           </div>
         </header>
         <details class="abstract" itemprop="abstract">
